--- a/benchmark/templates/benchmark/index.html
+++ b/benchmark/templates/benchmark/index.html
@@ -1,52 +1,112 @@
-{% extends 'benchmark/base.html' %}
-{% load static %}
-
-{% block content %}
-    <!--Parallax-->
-    <div class="parallax-container">
-        <div class="parallax"><img src="{% static 'images/bg-860379.jpg' %}"></div>
+{% extends 'benchmark/base.html' %} {% load static %} {% block content %}
+<!--Parallax-->
+<div class="parallax-container">
+    <div class="parallax">
+        <img src="{% static 'images/bg-860379.jpg' %}">
     </div>
+</div>
 
-    <!--Section-->
-    <section>
-        <div class="container">
-            <h1>Title and Caption</h1>
-            <div class="row">
-                <div class="col s12 m6">
-                    <div class="card large">
-                        <div class="card-image">
-                            <img src="{% static 'images/office.jpeg' %}">
-                            <span class="card-title black-text">Card Title</span>
-                        </div>
-                        <div class="card-content">
-                            <p>I am a very simple card. I am good at containing small bits of information.
-                            I am convenient because I require little markup to use effectively.</p>
-                        </div>
-                        <div class="card-action">
-                            <a href="#">This is a link</a>
-                        </div>
+<!--Section-->
+<section>
+    <div class="container">
+        <h1>
+            <a href="">BANK
+                <b>MEGA</b>
+            </a>
+        </h1>
+        <div class="row">
+            <div class="col s12 m6">
+                <div class="card large">
+                    <div class="card-image">
+                        <img src="{% static 'images/office.jpeg' %}">
+                        <span class="card-title black-text">Card Title</span>
+                    </div>
+                    <div class="card-content">
+                        <p>I am a very simple card. I am good at containing small bits of information. I am convenient because
+                            I require little markup to use effectively.</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="#">This is a link</a>
                     </div>
                 </div>
-                <div class="col s12 m6">
-                    <div class="card large">
-                        <div class="card-content">
-                            <p>I am a very simple card. I am good at containing small bits of information.
-                            I am convenient because I require little markup to use effectively.</p>
-                        </div>
-                        <div class="card-content">
-                            <canvas id="myChart" height="190px"></canvas>
-                        </div>
-                        <div class="card-action">
-                            <a href="#">This is a link</a>
-                        </div>
+            </div>
+            <div class="col s12 m6">
+                <div class="card large">
+                    <div class="card-content">
+                        <p>I am a very simple card. I am good at containing small bits of information. I am convenient because
+                            I require little markup to use effectively.</p>
+                    </div>
+                    <div class="card-content">
+                        <canvas id="myChart" height="190px"></canvas>
+                    </div>
+                    <div class="card-action">
+                        <a href="#">This is a link</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col s12 m6">
+                <div class="card large">
+                    <div class="card-content">
+                        <p>I am a very simple card. I am good at containing small bits of information. I am convenient because
+                            I require little markup to use effectively.</p>
+                    </div>
+                    <div class="card-content">
+                        <table id="mytable" class="highlight display">
+                            <thead>
+                                <tr>
+                                    <th>Name</th>
+                                    <th>Item Name</th>
+                                    <th>Item Price</th>
+                                </tr>
+                            </thead>
+
+                            <tbody>
+                                <tr>
+                                    <td>Alvin</td>
+                                    <td>Eclair</td>
+                                    <td>$0.87</td>
+                                </tr>
+                                <tr>
+                                    <td>Alan</td>
+                                    <td>Jellybean</td>
+                                    <td>$3.76</td>
+                                </tr>
+                                <tr>
+                                    <td>Jonathan</td>
+                                    <td>Lollipop</td>
+                                    <td>$7.00</td>
+                                </tr>
+                                <tr>
+                                    <td>Alvin</td>
+                                    <td>Eclair</td>
+                                    <td>$0.87</td>
+                                </tr>
+                                <tr>
+                                    <td>Alan</td>
+                                    <td>Jellybean</td>
+                                    <td>$3.76</td>
+                                </tr>
+                                <tr>
+                                    <td>Jonathan</td>
+                                    <td>Lollipop</td>
+                                    <td>$7.00</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="card-action">
+                        <a href="#">This is a link</a>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
-
-    <!--Parallax-->
-    <div class="parallax-container">
-        <div class="parallax"><img src="{% static 'images/bg-196658.jpg' %}"></div>
     </div>
+</section>
+
+<!--Parallax-->
+<div class="parallax-container">
+    <div class="parallax">
+        <img src="{% static 'images/bg-196658.jpg' %}">
+    </div>
+</div>
 {% endblock %}
