updated database models.

--- a/benchmark/templates/benchmark/bank_detail.html
+++ b/benchmark/templates/benchmark/bank_detail.html
@@ -11,8 +11,8 @@
                 <p class="medium-small grey-text">Private Bank</p>
             </div>
             <div class="col s2 center-align hide-on-small-only">
-                <h4 class="card-title grey-text text-darken-4">10+</h4>
-                <p class="medium-small grey-text">Work Experience</p>
+                <h4 class="card-title grey-text text-darken-4">1,000+</h4>
+                <p class="medium-small grey-text">Headcount Numbers</p>
             </div>
             <div class="col s2 center-align hide-on-small-only">
                 <h4 class="card-title grey-text text-darken-4">3</h4>
@@ -50,8 +50,8 @@
 </div>
 
 <div class="container">
-    <h3>
-        <b>{{ bank.institution_name }}</b>
+    <h3 style="text-decoration:none">
+        <a href="{% url 'bank_list' %}"><b>{{ bank.institution_name }}</b></a>
     </h3>
     <ul class="collapsible expandable">
         <li class="active">
@@ -333,7 +333,7 @@
                     <i class="fas fa-handshake"></i>SHAREHOLDERS</h5>
             </div>
             <div class="collapsible-body">
-                <i class="flag-icon flag-icon-id"></i>
+                <i class="flag-icon flag-icon-id flag-icon-squared"></i>
                 <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis consectetur non quam reprehenderit fugiat.
                     Quae labore beatae id, nulla debitis laudantium molestiae esse natus voluptates, veritatis modi, praesentium
                     maxime blanditiis.</span>
