--- a/benchmark/templates/benchmark/bank_list.html
+++ b/benchmark/templates/benchmark/bank_list.html
@@ -26,10 +26,10 @@
                         <td>{{ bank.est_date }}</td>
                         <td>{{ bank.website }}</td>
                         <td class="dt-center">
-                            <a href="{% url 'bank_detail' pk=bank.pk %}" class="waves-effect waves-light btn-floating btn-small teal">
+                            <a href="{% url 'bank_detail' pk=bank.pk %}" class="waves-effect waves-light btn-floating btn-small">
                                 <i class="far fa-eye"></i>
                             </a>
-                            <a href="#" class="waves-effect waves-light btn-floating btn-small amber">
+                            <a href="#" class="waves-effect waves-light btn-floating btn-small">
                                 <i class="far fa-edit"></i>
                             </a>
                             <a href="#" class="waves-effect waves-light btn-floating btn-small red accent-2">
