--- a/benchmark/templates/benchmark/bank_list.html
+++ b/benchmark/templates/benchmark/bank_list.html
@@ -13,8 +13,8 @@
                     <tr>
                         <th>Institution Name</th>
                         <th>Bank Name</th>
-                        <th>Est. Date</th>
-                        <th>Website</th>
+                        <th>Type</th>
+                        <th>BUKU</th>
                         <th class="dt-center" data-orderable="false">Action</th>
                     </tr>
                 </thead>
@@ -23,8 +23,8 @@
                     <tr>
                         <td>{{ bank.institution_name }}</td>
                         <td>{{ bank.bank_name }}</td>
-                        <td>{{ bank.est_date }}</td>
-                        <td>{{ bank.website }}</td>
+                        <td>{{ bank.get_category_display }}</td>
+                        <td>BUKU {{ bank.group }}</td>
                         <td class="dt-center">
                             <a href="{% url 'bank_detail' pk=bank.pk %}" class="waves-effect waves-light btn-floating btn-small">
                                 <i class="far fa-eye"></i>
