--- a/benchmark/templates/benchmark/bank_detail.html
+++ b/benchmark/templates/benchmark/bank_detail.html
@@ -49,8 +49,11 @@
 
 <div class="container">
     <h3 style="text-decoration:none">
-        <a href="{% url 'bank_list' %}"><b>{{ bank.institution_name }}</b></a>
+        <a href="{% url 'bank_list' %}">
+            <b>{{ bank.institution_name }}</b>
+        </a>
     </h3>
+    {{ bank }} {% for indicator in bank.indicator_set.all %} {{ indicator.period }} {{ indicator.asset }} {% endfor %}
     <ul class="collapsible expandable">
         <li class="active">
             <div class="collapsible-header">
@@ -91,42 +94,29 @@
                     <i class="fas fa-chart-bar"></i>KEY FIGURES</h5>
             </div>
             <div class="collapsible-body">
-                <div class="row">
-                    <div class="col s12 m6">
-                        <div class="btn">2017</div>
-                        <table class="highlight">
-                            <tr>
-                                <td width="250" class="grey-text">Total Asset</td>
-                                <td>{{ bank.est_date }}</td>
-                            </tr>
-                            <tr>
-                                <td class="grey-text">Profit Before Tax</td>
-                                <td>{{ bank.forex_date }}</td>
-                            </tr>
-                            <tr>
-                                <td class="grey-text">Funding</td>
-                                <td>{{ bank.listing_date }}</td>
-                            </tr>
-                            <tr>
-                                <td class="grey-text">Lending</td>
-                                <td>{{ bank.tin }}</td>
-                            </tr>
-                        </table>
-                    </div>
-                    <div class="col s12 m6">
-                        <div class="card">
-                            <div class="card-content">
-                                <span class="card-title">Card Title</span>
-                                <p>I am a very simple card. I am good at containing small bits of information. I am convenient
-                                    because I require little markup to use effectively.</p>
-                            </div>
-                            <div class="card-action">
-                                <a href="#">This is a link</a>
-                                <a href="#">This is a link</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                <table class="highlight">
+                    <thead>
+                        <tr>
+                            <th>Period</th>
+                            <th>Total Asset</th>
+                            <th>Funding</th>
+                            <th>Lending</th>
+                            <th>PBT</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for indicator in bank.indicator_set.all %}
+                        <tr>
+                            <td>{{ indicator.period }}</td>
+                            <td>{{ indicator.asset }}</td>
+                            <td>{{ indicator.funding }}</td>
+                            <td>{{ indicator.lending }}</td>
+                            <td>{{ indicator.pbt }}</td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+                <p class="grey-text">(dalam jutaan)</p>
             </div>
         </li>
         <li>
@@ -200,7 +190,9 @@
                     <i class="fas fa-user-tie"></i>EXECUTIVES & PEOPLE</h5>
             </div>
             <div class="collapsible-body">
-                <div class="row">
+
+                {% comment %} Grid {% endcomment %}
+                {% comment %} <div class="row">
                     <div class="col s12 m6 l3">
                         <div class="card-panel" height="150">
                             <div class="row valign-wrapper">
@@ -215,7 +207,6 @@
                                 </div>
                             </div>
                         </div>
-
                     </div>
                     <div class="col s12 m6 l3">
                         <div class="card-panel" height="150">
@@ -322,6 +313,99 @@
                             </div>
                         </div>
                     </div>
+                </div> {% endcomment %}
+
+                {% comment %} FlexBox {% endcomment %}
+                <div class="exec-container">
+                    <div class="exec-box">
+                        <div class="exec-item">
+                            <img src="{% static 'images/exec/MEGA_KT.png' %}" alt="">
+                        </div>
+                        <div class="exec-item">
+                            <span class="deep-orange-text text-darken-4">
+                                <b>Kostaman Thayib</b>
+                            </span>
+                            <br>President Director
+                        </div>
+                    </div>
+                    <div class="exec-box">
+                        <div class="exec-item">
+                            <img src="{% static 'images/exec/MEGA_MM.png' %}" alt="">
+                        </div>
+                        <div class="exec-item">
+                            <span class="deep-orange-text text-darken-4">
+                                <b>Martin Mulwanto</b>
+                            </span>
+                            <br>Director
+                        </div>
+                    </div>
+                    <div class="exec-box">
+                        <div class="exec-item">
+                            <img src="{% static 'images/exec/MEGA_DZ.png' %}" alt="">
+                        </div>
+                        <div class="exec-item">
+                            <span class="deep-orange-text text-darken-4">
+                                <b>Diza Larentie</b>
+                            </span>
+                            <br>Director
+                        </div>
+                    </div>
+                    <div class="exec-box">
+                        <div class="exec-item">
+                            <img src="{% static 'images/exec/MEGA_MD.png' %}" alt="">
+                        </div>
+                        <div class="exec-item">
+                            <span class="deep-orange-text text-darken-4">
+                                <b>Madi Darmadi</b>
+                            </span>
+                            <br>Director
+                        </div>
+                    </div>
+                    {% comment %} Line ke 2 {% endcomment %}
+                    <div class="exec-box">
+                        <div class="exec-item">
+                            <img src="{% static 'images/exec/MEGA_IE.png' %}" alt="">
+                        </div>
+                        <div class="exec-item">
+                            <span class="deep-orange-text text-darken-4">
+                                <b>Indivara Erni</b>
+                            </span>
+                            <br>Director
+                        </div>
+                    </div>
+                    <div class="exec-box">
+                        <div class="exec-item">
+                            <img src="{% static 'images/exec/MEGA_YL.png' %}" alt="">
+                        </div>
+                        <div class="exec-item">
+                            <span class="deep-orange-text text-darken-4">
+                                <b>Yuni Lastianto</b>
+                            </span>
+                            <br>Director
+                        </div>
+                    </div>
+                    <div class="exec-box">
+                        <div class="exec-item">
+                            <img src="{% static 'images/exec/MEGA_YB.png' %}" alt="">
+                        </div>
+                        <div class="exec-item">
+                            <span class="deep-orange-text text-darken-4">
+                                <b>YB Hariantono</b>
+                            </span>
+                            <br>Director
+                        </div>
+                    </div>
+                    <div class="exec-box">
+                        <div class="exec-item">
+                            <img src="{% static 'images/exec/MEGA_GT.png' %}" alt="">
+                        </div>
+                        <div class="exec-item">
+                            <span class="deep-orange-text text-darken-4">
+                                <b>Guntur Trihandono</b>
+                            </span>
+                            <br>Director
+                        </div>
+                    </div>
                 </div>
             </div>
         </li>
@@ -335,6 +419,15 @@
                 <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis consectetur non quam reprehenderit fugiat.
                     Quae labore beatae id, nulla debitis laudantium molestiae esse natus voluptates, veritatis modi, praesentium
                     maxime blanditiis.</span>
+            </div>
+        </li>
+        <li>
+            <div class="collapsible-header">
+                <h5>
+                    <i class="fas fa-hand-holding-usd"></i>TOTAL REWARDS</h5>
+            </div>
+            <div class="collapsible-body">
+                Total Rewards
             </div>
         </li>
     </ul>
