Modified total rewards table.

--- a/benchmark/templates/benchmark/bank_detail.html
+++ b/benchmark/templates/benchmark/bank_detail.html
@@ -53,6 +53,7 @@
             <b>{{ bank.institution_name }}</b>
         </a>
     </h3>
+    {{indicator}}
     <ul class="collapsible expandable">
         <li class="active">
             <div class="collapsible-header">
@@ -106,7 +107,7 @@
                     <tbody>
                         {% for indicator in bank.indicator_set.all %}
                         <tr>
-                            <td>{{ indicator.period }}</td>
+                            <td>{{ indicator.period.calendar_year }}</td>
                             <td>{{ indicator.asset }}</td>
                             <td>{{ indicator.funding }}</td>
                             <td>{{ indicator.lending }}</td>
@@ -424,6 +425,7 @@
                     <i class="fas fa-hand-holding-usd"></i>TOTAL REWARDS</h5>
             </div>
             <div class="collapsible-body">
+                <a class="waves-effect waves-light btn btn-small modal-trigger" href="#grading">Grading System</a>
                 <table class="highlight truncate">
                     <thead>
                         <tr>
@@ -438,84 +440,226 @@
                             <th width="20%">Eligibility</th>
                         </tr>
                     </thead>
+
                     <tbody>
                         <tr>
-                            <td rowspan="5" width="1" class="grey"></td>
-                            <td rowspan="4" width="1" class="deep-orange"></td>
-                            <td rowspan="3" width="1" class="orange"></td>
-                            <td rowspan="2" width="1" class="amber"></td>
-                            <td rowspan="2">Total Cash</td>
-                            <td>Guaranted Cash</td>
-                            <td>
-                                <ul>
-                                    <li>Basic Salary</li>
-                                    <li>Fixed Payment</li>
-                                    <li>Near Cash Allowances</li>
-                                </ul>
-                            </td>
+                            <td rowspan="16" width="1" class="grey"></td>
+                            <td rowspan="14" width="1" class="deep-orange"></td>
+                            <td rowspan="8" width="1" class="orange"></td>
+                            <td rowspan="6" width="1" class="amber"></td>
+                            <td rowspan="6">Total Cash</td>
+                            <td rowspan="3">Guaranted Cash</td>
+                            <td>Basic Salary</td>
+                            <td>Nett/Gross/Gross Up</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>Fixed Payment</td>
+                            <td>THR</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>Near Cash Allowances</td>
+                            <td>Meals/Transportation</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td rowspan="3">Annual Variable</td>
+                            <td>Sales Commission</td>
                             <td></td>
                             <td></td>
                         </tr>
                         <tr>
-                            <td>Annual Variable</td>
-                            <td>
-                                <ul>
-                                    <li>Sales Commission</li>
-                                    <li>Annual Bonus</li>
-                                    <li>Annual Incentive</li>
-                                </ul>
-                            </td>
+                            <td>Annual Bonus</td>
                             <td></td>
                             <td></td>
                         </tr>
                         <tr>
-                            <td></td>
-                            <td>Total Direct Compensation</td>
-                            <td>Long Term Incentives</td>
-                            <td>
-                                <ul>
-                                    <li>Stock Options</li>
-                                    <li>Long Term Cash Plans</li>
-                                </ul>
-                            </td>
+                            <td>Annual Incentive</td>
                             <td></td>
                             <td></td>
                         </tr>
                         <tr>
-                            <td></td>
-                            <td></td>
-                            <td>Total Remuneration</td>
-                            <td>Benefits</td>
-                            <td>
-                                <ul>
-                                    <li>Retirement Provision</li>
-                                    <li>Health/Medical Insurance</li>
-                                    <li>Death/Disability Insurance</li>
-                                    <li>Paid Time Off</li>
-                                    <li>Cars</li>
-                                    <li>Loans</li>
-                                </ul>
-                            </td>
+                            <td rowspan="2"></td>
+                            <td rowspan="2">Total Direct Compensation</td>
+                            <td rowspan="2">Long Term Incentives</td>
+                            <td>Stock Options</td>
                             <td></td>
                             <td></td>
                         </tr>
                         <tr>
+                            <td>Long Term Cash Plans</td>
                             <td></td>
                             <td></td>
+                        </tr>
+                        <tr>
+                            <td rowspan="6"></td>
+                            <td rowspan="6"></td>
+                            <td rowspan="6">Total Remuneration</td>
+                            <td rowspan="6">Benefits</td>
+                            <td>Retirement Provision</td>
                             <td></td>
-                            <td>Total Reward</td>
-                            <td>Non Financial Rewards</td>
-                            <td>
-                                <ul>
-                                    <li>Vacation</li>
-                                    <li>Training</li>
-                                </ul>
-                            </td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>Health/Medical Insurance</td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>Death/Disability Insurance</td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>Paid Time Off</td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>Cars</td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>Loans</td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td rowspan="2"></td>
+                            <td rowspan="2"></td>
+                            <td rowspan="2"></td>
+                            <td rowspan="2">Total Reward</td>
+                            <td rowspan="2">Non Financial Rewards</td>
+                            <td>Vacation</td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>Training</td>
                             <td></td>
                             <td></td>
                         </tr>
                     </tbody>
                 </table>
+
+                <!-- Modal Grading System -->
+                <div id="grading" class="modal modal-fixed-footer">
+                    <div class="modal-content">
+                        <h4>GRADING
+                            <b>SYSTEM</b>
+                        </h4>
+                        <table class="highlight">
+                            <thead class="amber">
+                                <tr>
+                                    <th>Level</th>
+                                    <th>Grade</th>
+                                    <th>Grade Description</th>
+                                    <th>Mid Point</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td class="grey-text">1</td>
+                                    <td>ADS1</td>
+                                    <td>Administrator 1</td>
+                                    <td>Rp #,###,###.-</td>
+                                </tr>
+                                <tr>
+                                    <td class="grey-text">2</td>
+                                    <td>ADS2</td>
+                                    <td>Administrator 2</td>
+                                    <td>Rp #,###,###.-</td>
+                                </tr>
+                                <tr>
+                                    <td class="grey-text">3</td>
+                                    <td>ADS3</td>
+                                    <td>Administrator 3</td>
+                                    <td>Rp #,###,###.-</td>
+                                </tr>
+                                <tr>
+                                    <td class="grey-text">4</td>
+                                    <td>JO</td>
+                                    <td>Junior Officer</td>
+                                    <td>Rp #,###,###.-</td>
+                                </tr>
+                                <tr>
+                                    <td class="grey-text">5</td>
+                                    <td>OFF</td>
+                                    <td>Officer</td>
+                                    <td>Rp #,###,###.-</td>
+                                </tr>
+                                <tr>
+                                    <td class="grey-text">6</td>
+                                    <td>SO</td>
+                                    <td>Senior Officer</td>
+                                    <td>Rp #,###,###.-</td>
+                                </tr>
+                                <tr>
+                                    <td class="grey-text">7</td>
+                                    <td>AM</td>
+                                    <td>Assistant Manager</td>
+                                    <td>Rp #,###,###.-</td>
+                                </tr>
+                                <tr>
+                                    <td class="grey-text">8</td>
+                                    <td>MGR</td>
+                                    <td>Manager</td>
+                                    <td>Rp #,###,###.-</td>
+                                </tr>
+                                <tr>
+                                    <td class="grey-text">9</td>
+                                    <td>SM</td>
+                                    <td>Senior Manager</td>
+                                    <td>Rp #,###,###.-</td>
+                                </tr>
+                                <tr>
+                                    <td class="grey-text">10</td>
+                                    <td>AVP</td>
+                                    <td>Assistant Vice President</td>
+                                    <td>Rp #,###,###.-</td>
+                                </tr>
+                                <tr>
+                                    <td class="grey-text">11</td>
+                                    <td>VP1</td>
+                                    <td>Vice President 1</td>
+                                    <td>Rp #,###,###.-</td>
+                                </tr>
+                                <tr>
+                                    <td class="grey-text">12</td>
+                                    <td>VP2</td>
+                                    <td>Vice President 2</td>
+                                    <td>Rp #,###,###.-</td>
+                                </tr>
+                                <tr>
+                                    <td class="grey-text">13</td>
+                                    <td>SVP1</td>
+                                    <td>Senior Vice President 1</td>
+                                    <td>Rp #,###,###.-</td>
+                                </tr>
+                                <tr>
+                                    <td class="grey-text">14</td>
+                                    <td>SVP2</td>
+                                    <td>Senior Vice President 2</td>
+                                    <td>Rp #,###,###.-</td>
+                                </tr>
+                                <tr>
+                                    <td class="grey-text">15</td>
+                                    <td>EVP</td>
+                                    <td>Executive Vice President</td>
+                                    <td>Rp #,###,###.-</td>
+                                </tr>
+                            </tbody>
+
+                        </table>
+                    </div>
+                    <div class="modal-footer">
+                        <a href="#!" class="modal-close waves-effect waves-light btn-flat">Close</a>
+                    </div>
+
+                </div>
+
             </div>
         </li>
     </ul>
