--- a/benchmark/templates/benchmark/base.html
+++ b/benchmark/templates/benchmark/base.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="{% static 'css/all.css' %}" />
     <link rel="stylesheet" type="text/css" media="screen" href="{% static 'css/main.css' %}" />
     <link rel="stylesheet" type="text/css" media="screen" href="{% static 'css/datatables.css' %}" />
+    <link rel="stylesheet" type="text/css" media="screen" href="{% static 'css/dropify.css' %}" />
 
 </head>
 
@@ -189,6 +190,7 @@
     <script src="{% static 'js/jquery-3.3.1.js' %}"></script>
     <script src="{% static 'js/chart.bundle.js' %}"></script>
     <script src="{% static 'js/datatables.js' %}"></script>
+    <script src="{% static 'js/dropify.js' %}"></script>
     <script src="{% static 'js/main.js' %}"></script>
 
     <!--ChartJS-->
